# Libcuckoo

./: CMakeLists.txt
data/2024-11-04-05-10-36/: throughput_report.csv
data/2024-11-04-05-20-15/: throughput_report.csv
data/2024-11-04-11-14-52/: throughput_report.csv
scripts/: automatic_run_ext_plot.sh  fetch_data_from_log_fixed_ops.sh  plot_libcukoo_throughput.py  run_libcukoo.sh
src/: libcuckoo_client.cpp
